fix github link

--- a/_variables.yml
+++ b/_variables.yml
@@ -9,7 +9,7 @@ course:
   term: Fall
   year: 2025
   site: "https://www.stats4cs.com/"
-  github-org: "https://github.com/mdogucu?tab=repositories&q=stats67a-fa25&type=&language=&sort="
+  github-org: "https://github.com/mdogucu?tab=repositories&q=stats67-fa25&type=&language=&sort="
   discussion: "https://edstem.org/us/courses/87623"
   lms: "https://canvas.eee.uci.edu/courses/76405/gradebook"
   gradescope: "https://www.gradescope.com/courses/1142665"
