lynn's office hour location

--- a/_variables.yml
+++ b/_variables.yml
@@ -36,7 +36,7 @@ ta1:
   photo: "img/ta1.jpeg"
   audio: "ta1.mp3"
   office-hours: "Th 3:00 pm - 4:00 pm and F 3:00 pm - 4:00 pm in person and online"
-  office: "DBH 2XXX"
+  office: "DBH 2221"
   zoom: "https://uci.zoom.us/j/98487600937"
   
   
