add collaboration hour

--- a/_variables.yml
+++ b/_variables.yml
@@ -17,6 +17,8 @@ course:
   finalb: on Mon, Dec 8 at 1:30-3:30pm	
   midterm: on Oct 29 during lecture time
   homework: 11:00 am on Wednesdays
+  collab: at 4:00 - 6:00 pm on Mondays and Fridays
+  collab-location: https://edstem.org/us/courses/87623/discussion/7059419
 instructor:
   name: Dr. Mine Dogucu
   email: mdogucu@uci.edu
