--- a/_quarto.yml
+++ b/_quarto.yml
@@ -30,6 +30,8 @@ website:
       - href: "resources.qmd"
         text: "{{< fa medal >}} Resources"
     right:
+    - icon: robot
+      href: "{{< var course.classchat >}}"
     - icon: github
       href: "{{< var course.github-org >}}"
     - icon: patch-question
